# finetune-embedding

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
finetune_embedding/: exceptions.py  main.py
finetune_embedding/config/: loaders.py  settings.py
finetune_embedding/data/: hnm.py  loaders.py  preprocessing.py
finetune_embedding/evaluation/: evaluators.py  runner.py
finetune_embedding/model/: loaders.py  lora.py
finetune_embedding/services/: pipeline.py
finetune_embedding/training/: losses.py  trainer.py
finetune_embedding/utils/: device.py  logging.py  seeding.py
tests/: conftest.py  test_main.py
tests/config/: test_loaders.py
tests/data/: test_hnm.py  test_preprocessing.py
tests/evaluation/: test_evaluators.py  test_runner.py
tests/model/: test_loaders.py  test_lora.py
tests/services/: test_pipeline.py
tests/training/: test_losses.py  test_trainer.py
tests/utils/: test_seeding.py
